@@ -1,0 +1,6 @@
+%include src/test/cases/include2/nested2
+
+token b blublw
+sd
+asf sad adsdfa
+token  s%include src/test/cases/include2/nested3-sdfs a
