@@ -1,0 +1,3 @@
+token 1
+something else %include src/test/cases/include2/nested3
+token 2
